...
          selectedIndex: selectedPage,
          onDestinationSelected: (selected) =>
              setState(() => selectedPage = selected),
          destinations: const [
            NavigationDestination(
              icon: Icon(Icons.grid_view_rounded),
              label: '大厅',
            ),
            NavigationDestination(
              icon: Icon(Icons.style_outlined),
              label: '牌桌预览',
            ),
            NavigationDestination(
              icon: Icon(Icons.person_outline),
              label: '账号',
            ),
          ],
        ),
      ),
    );
  }
...
